Fixed TOC overlapping issues

--- a/posts/css/toc.css
+++ b/posts/css/toc.css
@@ -11,7 +11,7 @@ html {
   overflow-y: auto; /* Add scroll if TOC is too long */
   overflow-x: auto;
   width: 350px; /* Set a fixed width for TOC */
-  padding: 10px;
+  padding: 20px;
   border-right: 2px solid #727470; /* Optional: Border for visual separation */
   z-index: 100; /* Ensure TOC is above other elements */
 }
@@ -39,7 +39,7 @@ html {
   text-decoration: underline;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 1600px) {
   #sticky-toc {
     display: none; /* Hide TOC on smaller screens */
   }
